--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ crossterm = "0.27.0"
 ratatui = "0.27.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+shellexpand = "2.1"
