--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Rust (Linux build)
 
 on:
   push:
@@ -10,17 +10,20 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - name: Build release
-        run: cargo build --release
+
+      - name: Build release for Linux
+        run: cargo build --release --target x86_64-unknown-linux-gnu
+
       - name: Run tests
-        run: cargo test --release --verbose
-      - name: Upload executable
+        run: cargo test --release --verbose --target x86_64-unknown-linux-gnu
+
+      - name: Upload Linux executable
         uses: actions/upload-artifact@v4
         with:
-          name: hypr-tui-executable
-          path: target/release/hypr-tui
+          name: hypr-tui-linux
+          path: target/x86_64-unknown-linux-gnu/release/hypr-tui
